wip: demo. debugging binary x[c, t]'s all being 0

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -12,80 +12,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "47aa9d89",
+   "cell_type": "markdown",
+   "id": "10ac9a40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Optimal SOC values:\n",
-      "Stop 0: SOC^a = 0.000, SOC^l = 1.000\n",
-      "Stop 1: SOC^a = 0.000, SOC^l = 0.810\n",
-      "Stop 2: SOC^a = 0.000, SOC^l = 0.000\n"
-     ]
-    }
-   ],
    "source": [
-    "# --- Parameters ---\n",
-    "K = 101                          # Number of grid points\n",
-    "g_min, g_max = 0.0, 1.0         # SOC bounds (0–1)\n",
-    "Δg = (g_max - g_min) / (K - 1)  # Grid resolution\n",
-    "g_vals = [g_min + k * Δg for k in range(K)]  # Grid points\n",
-    "\n",
-    "C = 3                           # Number of charging stops\n",
-    "η = 0.01                       # Efficiency loss per km\n",
-    "d = [100, 80]                   # Distance between c-1 and c (length C-1)\n",
-    "\n",
-    "# --- Create model ---\n",
-    "m = Model(\"EV_SOC_Discretization\")\n",
-    "m.setParam(\"OutputFlag\", 0)  # Suppress solver output\n",
-    "\n",
-    "# --- Variables ---\n",
-    "# SOC indicators: 1 if SOC is g_k, else 0\n",
-    "s_a = {(c, k): m.addVar(vtype=GRB.BINARY, name=f\"s_a[{c},{k}]\")\n",
-    "       for c in range(C) for k in range(K)}\n",
-    "s_l = {(c, k): m.addVar(vtype=GRB.BINARY, name=f\"s_l[{c},{k}]\")\n",
-    "       for c in range(C) for k in range(K)}\n",
-    "\n",
-    "# --- Constraints ---\n",
-    "# Each SOC is exactly one grid point\n",
-    "for c in range(C):\n",
-    "    m.addConstr(quicksum(s_a[c, k] for k in range(K)) == 1, name=f\"one_soc_a[{c}]\")\n",
-    "    m.addConstr(quicksum(s_l[c, k] for k in range(K)) == 1, name=f\"one_soc_l[{c}]\")\n",
-    "\n",
-    "# Arrival SOC at c = departure SOC at c-1 minus η*d\n",
-    "for c in range(1, C):\n",
-    "    lhs = quicksum(g_vals[k] * s_l[c-1, k] for k in range(K))\n",
-    "    rhs = quicksum(g_vals[k] * s_a[c, k] for k in range(K))\n",
-    "\n",
-    "    # Arrival SOC can be snapped to either the floor or floor + Δg\n",
-    "    m.addConstr(lhs - η * d[c-1] - rhs >= 0, name=f\"arrive_lower[{c}]\")\n",
-    "    m.addConstr(lhs - η * d[c-1] - rhs <= Δg, name=f\"arrive_upper[{c}]\")\n",
-    "\n",
-    "# Optional: Set initial SOC = 0\n",
-    "m.addConstr(quicksum(g_vals[k] * s_a[0, k] for k in range(K)) == 0.0, name=\"init_soc\")\n",
-    "\n",
-    "# --- Objective (dummy for feasibility) ---\n",
-    "m.setObjective(0, GRB.MINIMIZE)\n",
-    "\n",
-    "# --- Solve ---\n",
-    "m.optimize()\n",
-    "\n",
-    "# --- Results ---\n",
-    "print(\"\\nOptimal SOC values:\")\n",
-    "for c in range(C):\n",
-    "    soc_a = sum(g_vals[k] * s_a[c, k].x for k in range(K))\n",
-    "    soc_l = sum(g_vals[k] * s_l[c, k].x for k in range(K))\n",
-    "    print(f\"Stop {c}: SOC^a = {soc_a:.3f}, SOC^l = {soc_l:.3f}\")\n"
+    "This one works, but without the charging grid."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "8c52f457",
    "metadata": {},
    "outputs": [
@@ -93,13 +29,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model status: 2\n",
       "\n",
       "Optimal SOC values:\n",
-      "Stop 0: SOC^a = 0.000, SOC^l = 1.000\n",
-      "Stop 1: SOC^a = 0.000, SOC^l = 0.810\n",
-      "Stop 2: SOC^a = 0.000, SOC^l = 0.000\n",
+      "Stop 0: SOC^a = 0.000, SOC^l = 0.130\n",
+      "Stop 1: SOC^a = 0.030, SOC^l = 0.110\n",
+      "Stop 2: SOC^a = 0.030, SOC^l = 0.000\n",
       "\n",
-      "Charging decisions:\n"
+      "Charging decisions:\n",
+      "\n",
+      "Arrival times (t_a):\n",
+      "t_a[0] = 0.000\n",
+      "t_a[1] = 100.000\n",
+      "t_a[2] = 180.000\n",
+      "\n",
+      "Departure times (t_l):\n",
+      "t_l[0] = 0.000\n",
+      "t_l[1] = 100.000\n",
+      "t_l[2] = 180.000\n",
+      "\n",
+      "Objective value: 180.0\n",
+      "\n",
+      "Charging decision grid (x[c,t]):\n",
+      "Stop 0: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "Stop 1: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "Stop 2: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n"
      ]
     }
    ],
@@ -113,9 +67,20 @@
     "g_vals = [g_min + k * delta_g for k in range(K)]  # Grid points\n",
     "\n",
     "C = 3                           # Number of charging stops\n",
-    "T = 10                          # Number of time slots per stop\n",
-    "eta = 0.01                      # Efficiency loss per km\n",
+    "T = 500                          # Number of time slots per stop\n",
+    "eta = 0.001                      # kWh per km\n",
     "d = [100, 80]                   # Distance between c-1 and c (length C-1)\n",
+    "drivetimes = [1 * dist for dist in d]\n",
+    "\n",
+    "\n",
+    "e_values = np.array([\n",
+    "    [0] * T,   # stop 0\n",
+    "    [1] * T,   # stop 1\n",
+    "    [100] * T    # stop 2\n",
+    "])\n",
+    "\n",
+    "# Convert to dictionary with keys (c,t) for Gurobi\n",
+    "e = {(c, t): e_values[c, t] for c in range(C) for t in range(T)}\n",
     "\n",
     "# --- Create model ---\n",
     "m = Model(\"EV_SOC_Discretization_with_X\")\n",
@@ -132,7 +97,33 @@
     "x = {(c, t): m.addVar(vtype=GRB.BINARY, name=f\"x[{c},{t}]\")\n",
     "     for c in range(C) for t in range(T)}\n",
     "\n",
+    "# Discrete timstep variables\n",
+    "t_a = m.addVars(C, vtype=GRB.CONTINUOUS, name=\"t_a\")\n",
+    "t_l = m.addVars(C, vtype=GRB.CONTINUOUS, name=\"t_l\")\n",
+    "\n",
     "# --- Constraints ---\n",
+    "# 1) t_a[c] <= t + T*(1 - x[c,t])  for all c, t\n",
+    "for c in range(C):\n",
+    "    for t in range(T):\n",
+    "        m.addConstr(t_a[c] <= t + T * (1 - x[c, t]), \n",
+    "                    name=f\"arr_time_limit[{c},{t}]\")\n",
+    "\n",
+    "# 2) t_a[0] = 0\n",
+    "m.addConstr(t_a[0] == 0, name=\"initial_arrival_time\")\n",
+    "\n",
+    "# 3) t_l[c] >= t * x[c,t]  for all c, t\n",
+    "for c in range(C):\n",
+    "    for t in range(T):\n",
+    "        m.addConstr(t_l[c] >= t * x[c, t], \n",
+    "                    name=f\"dep_time_from_x[{c},{t}]\")\n",
+    "        \n",
+    "\n",
+    "# Arrival times are deterministic from departures + drive\n",
+    "m.addConstr(t_a[0] == 0, name=\"ta0_is_zero\")\n",
+    "for c in range(C - 1):\n",
+    "    m.addConstr(t_a[c+1] == t_l[c] + drivetimes[c], name=f\"ta_recur[{c}]\")\n",
+    "\n",
+    "\n",
     "# Each SOC is exactly one grid point\n",
     "for c in range(C):\n",
     "    m.addConstr(quicksum(s_a[c, k] for k in range(K)) == 1, name=f\"one_soc_a[{c}]\")\n",
@@ -145,16 +136,29 @@
     "    m.addConstr(lhs - eta * d[c-1] - rhs >= 0, name=f\"arrive_lower[{c}]\")\n",
     "    m.addConstr(lhs - eta * d[c-1] - rhs <= delta_g, name=f\"arrive_upper[{c}]\")\n",
     "\n",
+    "# Constraint: t_{c+1}^a - t_c^l = consts[c]\n",
+    "for c in range(C-1):\n",
+    "    m.addConstr(t_a[c+1] - t_l[c] == drivetimes[c], name=f\"time_gap[{c}]\")\n",
+    "\n",
+    "# Ensure t_a[0] <= t_l[0] <= t_a[1] <= t_l[1] <= t_a[2] ...\n",
+    "for c in range(C):\n",
+    "    m.addConstr(t_a[c] <= t_l[c], name=f\"arr_before_dep[{c}]\")\n",
+    "    if c < C-1:\n",
+    "        m.addConstr(t_l[c] <= t_a[c+1], name=f\"dep_before_next_arr[{c}]\")\n",
+    "\n",
     "# Initial SOC = 0\n",
     "m.addConstr(quicksum(g_vals[k] * s_a[0, k] for k in range(K)) == 0.0, name=\"init_soc\")\n",
     "\n",
-    "# --- Dummy Objective: Minimize total time charging ---\n",
-    "m.setObjective(quicksum(x[c, t] for c in range(C) for t in range(T)), GRB.MINIMIZE)\n",
+    "# --- Objective: Minimize total time and emissions ---\n",
+    "emissions = sum(e[c, t] * x[c, t] for c in range(C) for t in range(T))\n",
+    "m.setObjective(t_l[2] + emissions, GRB.MINIMIZE)\n",
     "\n",
     "# --- Solve ---\n",
     "m.optimize()\n",
     "\n",
     "# --- Results ---\n",
+    "print(f\"Model status: {m.status}\")\n",
+    "\n",
     "print(\"\\nOptimal SOC values:\")\n",
     "for c in range(C):\n",
     "    soc_a = sum(g_vals[k] * s_a[c, k].x for k in range(K))\n",
@@ -165,12 +169,36 @@
     "for c in range(C):\n",
     "    for t in range(T):\n",
     "        if x[c, t].x > 0.5:\n",
-    "            print(f\"Charge at stop {c} during time {t}\")\n"
+    "            print(f\"Charge at stop {c} during time {t}\")\n",
+    "\n",
+    "print(\"\\nArrival times (t_a):\")\n",
+    "for c in range(C):\n",
+    "    print(f\"t_a[{c}] = {t_a[c].X:.3f}\")\n",
+    "\n",
+    "print(\"\\nDeparture times (t_l):\")\n",
+    "for c in range(C):\n",
+    "    print(f\"t_l[{c}] = {t_l[c].X:.3f}\")\n",
+    "\n",
+    "\n",
+    "print(\"\\nObjective value:\", m.objVal)\n",
+    "\n",
+    "print(\"\\nCharging decision grid (x[c,t]):\")\n",
+    "for c in range(C):\n",
+    "    row = [f\"{x[c, t].X:.0f}\" for t in range(T)]\n",
+    "    print(f\"Stop {c}: \" + \" \".join(row))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40816fb5",
+   "metadata": {},
+   "source": [
+    "This one attempts to do the grid but is not working."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f6193537",
    "metadata": {},
    "outputs": [
@@ -183,16 +211,16 @@
       "CPU model: Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz\n",
       "Thread count: 8 physical cores, 16 logical processors, using up to 16 threads\n",
       "\n",
-      "Optimize a model with 14 rows, 767 columns and 1968 nonzeros\n",
-      "Model fingerprint: 0x0ba8e508\n",
-      "Variable types: 0 continuous, 767 integer (767 binary)\n",
+      "Optimize a model with 136 rows, 773 columns and 2212 nonzeros\n",
+      "Model fingerprint: 0x00cc3349\n",
+      "Variable types: 6 continuous, 767 integer (767 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e-02, 1e+00]\n",
+      "  Matrix range     [1e-02, 2e+01]\n",
       "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [2e-01, 1e+00]\n",
-      "Presolve removed 4 rows and 405 columns\n",
-      "Presolve time: 0.03s\n",
+      "  RHS range        [2e-01, 4e+01]\n",
+      "Presolve removed 126 rows and 411 columns\n",
+      "Presolve time: 0.02s\n",
       "Presolved: 10 rows, 362 columns, 947 nonzeros\n",
       "Variable types: 0 continuous, 362 integer (359 binary)\n",
       "Found heuristic solution: objective 0.0000000\n",
@@ -230,6 +258,7 @@
     "delta_g = 0.05                 # SOC gained per charging time step\n",
     "\n",
     "distances = [1.0, 2.0, 1.0]    # Distances between stops\n",
+    "drivetimes = [dist * 1 for dist in distances] # Drivetimes between stops\n",
     "g_vals = [k / (K - 1) for k in range(K)]  # SOC grid: 0.00, 0.01, ..., 1.00\n",
     "\n",
     "# Gurobi model\n",
@@ -239,6 +268,14 @@
     "x = m.addVars(C, T, vtype=GRB.BINARY, name=\"x\")  # x[c,t] = 1 if charge at stop c during time t\n",
     "s_a = m.addVars(C + 1, K, vtype=GRB.BINARY, name=\"s_a\")  # SOC^a[c] at arrival\n",
     "s_l = m.addVars(C, K, vtype=GRB.BINARY, name=\"s_l\")      # SOC^l[c] after charging\n",
+    "t_a = m.addVars(C, vtype=GRB.CONTINUOUS, name=\"t_a\")\n",
+    "t_l = m.addVars(C, vtype=GRB.CONTINUOUS, name=\"t_l\")\n",
+    "\n",
+    "# Constraints: t_c^a <= t + T*(1 - x[c,t]) for all t, c\n",
+    "for c in range(C):\n",
+    "    for t in range(T):\n",
+    "        m.addConstr(t_a[c] <= (t+1) + T * (1 - x[c, t]), name=f\"time_limit[{c},{t}]\")\n",
+    "        # note: if your t is meant to be 1-based in math, use (t+1) here in code\n",
     "\n",
     "# Each SOC must be exactly one grid value\n",
     "for c in range(C + 1):\n",
@@ -267,6 +304,18 @@
     "        gp.quicksum(g_vals[k] * s_l[c, k] for k in range(K)) - eta * distances[c],\n",
     "        name=f\"soc_a_transition_{c}\"\n",
     "    )\n",
+    "\n",
+    "\n",
+    "# Constraints: t_c^a <= t + T*(1 - x[c,t]) for all t, c\n",
+    "for c in range(C):\n",
+    "    for t in range(T):\n",
+    "        m.addConstr(t_a[c] <= (t+1) + T * (1 - x[c, t]), name=f\"time_limit[{c},{t}]\")\n",
+    "        # note: if your t is meant to be 1-based in math, use (t+1) here in code\n",
+    "        \n",
+    "\n",
+    "\n",
+    "for c in range(C-1):\n",
+    "    m.addConstr(t_a[c+1] - t_l[c] == drivetimes[c], name=f\"time_gap[{c}]\")\n",
     "\n",
     "# Objective: minimize total time spent charging\n",
     "m.setObjective(gp.quicksum(x[c, t] for c in range(C) for t in range(T)), GRB.MINIMIZE)\n",
